[package]
name = "tracker-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
modfile = "1.4.6"
rodio = { version = "0.16.0", features = ["symphonia-all"] }
sdl2 = { version = "0.35", optional = true }

[target.'cfg(target_os = "windows")'.dependencies]
sdl2 = { version = "0.35", features = ["bundled", "static-link"], optional = true }
